# design_drafter

./: .dockerignore  .env.example  .gitignore  .gitmodules  404.html  AGENTS.md  Makefile  README.md  UMLBot_streamlit_app.html  __init__.py  architecture.html  docker-compose.yml  gradio_app.py  index.html  mkdocs.yml  objects.inv  prd.txt  pyproject.toml  requirements.txt  search.html  setup.py  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.kilocode/rules/: coding_standard.md
Design_Drafter/: api_server.py  diagram_generator.py  exceptions.py  prompt_manager.py  retry_policy.py  uml_draft_handler.py
Design_Drafter/config/: config.py
Design_Drafter/services/: __init__.py  diagram_service.py
Design_Drafter/utils/: plantuml_extractor.py  utils_example.py
Docker/: Dockerfile.backend  Dockerfile.frontend  startup.sh
UMLBot/: __init__.html  __init__.py  api_server.html  api_server.py  exceptions.html  exceptions.py  llm_interface.html  llm_interface.py  uml_draft_handler.html  uml_draft_handler.py
UMLBot/config/: __init__.html  __init__.py  config.html  config.py
UMLBot/services/: __init__.html  __init__.py  diagram_service.html  diagram_service.py
UMLBot/utils/: __init__.py  plantuml_extractor.html
app/: __init__.py  fastapi_config.py  gradio_app.py  server.py  streamlit_app.py
app/frontend/: License.md  README.md  constants.ts  package-lock.json  package.json
app/v01/: example.py
assets/: example.prompty  uml_diagram.prompty
docs/: Design_Drafter_streamlit_app.md  UMLBot_streamlit_app.md  architecture.md  index.md  src_setup.sh
docs/PlantUML/: Activity-ErrorHandling.puml  Actvity.puml  Component-KeyLogic.puml  ComprehensiveClass.puml  Context-System.puml  DataModel.puml  Deployment-Scaling.puml  Deployment.puml  UseCase.puml  (+10 more)
hooks/: post_gen_init.sh
llm_utils/: index.html
search/: search_index.json
secrets/: README.md
tests/: index.html  test_api_layer.py  test_generic_error_handler.py  test_integration_chat_uml_error.py  test_llm_adapter.py  test_prompt_manager.py  test_retry_policy.py  test_uml_draft_handler.py
(+52 files in other folders)
