[project]
name = "UMLBot"
version = "0.1.0"
description = "PoC"
requires-python = ">=3.11"
dependencies = [
    "aiweb-common",
    "azure-ai-formrecognizer>=3.3.3",
    "black>=25.9.0",
    "fastapi>=0.118.3",
    "flake8>=7.3.0",
    "gradio>=5.49.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "langchain-prompty>=0.1.2",
    "matplotlib>=3.10.7",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.21",
    "mkdocs-monorepo-plugin>=1.1.2",
    "mkdocstrings[python]>=0.30.1",
    "mlflow>=3.4",
    "openai>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pip-tools>=7.5.1",
    "pyodbc>=5.2.0",
    "pytest>=8.4.2",
    "python-multipart>=0.0.20",
    "rapidfuzz>=3.14.1",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "st-pages>=1.0.1",
    "streamlit>=1.50.0",
    "tiktoken>=0.12.0",
    "typer>=0.19.2",
    "uvicorn>=0.37.0",
    "wheel>=0.45.1",
    "xlsxwriter>=3.2.9",
]

# Black formatting
[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | venv
    | env
    | _build
    | buck-out
    | build
    | dist
    | data
  )/
'''
[tool.autopep8]
max_line_length = 100
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
list_fixes= true
exclude=["autopep8"]
aggressive = 2

# iSort
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"

[tool.uv.workspace]
members = [
    "llm_utils",
]

[tool.uv.sources]
aiweb-common = { workspace = true }

#Development Dependencies
[project.optional-dependencies]
dev = [
  "black[jupyter]",
  "mkdocstrings[python]",
  "mkdocs-monorepo-plugin"
]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]
